<resources>
    <string name="capture_image">Capture Image</string>
    <string name="upload_image">Upload Image</string>
    <string name="known_diseases">Common Diseases</string>
    <string name="condiplant">CondiPlant</string>
    <string name="remedy">Remedy</string>
    <string name="back">Back</string>
    <string name="close">Close</string>
    <string name="app_name">CondiPlant\n</string>
    <string name="prediction">Prediction</string>
    <string name="error_message">Error Message Here\n</string>
    <string name="back_button">Back Btn</string>
    <string name="uploaded_img">Uploaded image by the user</string>
    <string name="app_logo">Condiplant logo</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="termsContent">
    <b>Terms of Service for CondiPlant</b>\n
    Last Updated: December 02, 2024\n\n
    <b>1. Introduction</b>\n
    Welcome to CondiPlant! CondiPlant is a mobile application designed to help farmers and agricultural workers to identify root crop diseases using machine learning and image recognition technology. By using this app, you agree to these Terms and Conditions.\n\n
    <b>Developer Information:</b> CondiPlant\n
    <b>Contact Email:</b> condiplantuc@gmail.com\n\n

    <b>2. Acceptance of Terms</b>\n\n
    By downloading, installing, or using CondiPlant, you confirm that you have read, understood, and agree to comply with these Terms. If you do not agree to these Terms, please do not use CondiPlant.\n\n

    <b>3. User Obligations and Restrictions</b>\n
    When using CondiPlant, you agree to:\n\n
        <ul>
            <li>Use the app only for its intended purpose of identifying root crop diseases.</li>\n
            <li>Avoid engaging in any unlawful activities or unauthorized modifications of the app.</li>\n
            <li>Refrain from reverse-engineering, distributing, or reselling the app without our written permission.</li>\n\n

        </ul>

    <b>4. Permissions Required</b>\n\n
    CondiPlant requires access to:\n\n
        <ul>
            <li>Camera: For capturing images of crops for disease identification.</li>\n\n
        </ul>
    By granting these permissions, you allow CondiPlant to perform its core functionalities. If you deny these permissions, certain features may not work as intended.\n\n

    <b>5. Accuracy and Limitation of Disease Identification</b>\n\n
    CondiPlant uses machine learning to analyze and identify potential root crop diseases based on image recognition. However, the identification provided by CondiPlant is advisory and may not always be accurate. We strongly recommend consulting with an agricultural expert for confirmation and further guidance.\n\n

    <b>6. Privacy Policy</b>\n\n
    Your privacy is important to us. CondiPlant is designed to operate offline, ensuring that your personal data remains secure. We do not collect or store any user information, including the images captured by the app. Instead, we only retain the plant name, the identified disease, and the capture date for reporting purposes. All images are stored temporarily during the analysis process and are deleted immediately after use. This ensures your data remains private and is not retained on our servers or devices.\n\n

    <b>7. Data Storage and Usage</b>\n\n
    CondiPlant does not store any user information, including the images captured. Instead, we only retain the plant name, the disease identified, and the capture date for reporting purposes. This approach ensures that your privacy is safeguarded while allowing you to review detection results later. All images are only stored temporarily during analysis and are deleted immediately afterward.\n\n

    <b>8. Disclaimer and Limitation of Liability</b>\n\n
    CondiPlant is provided on an as is and as available basis. While we strive to ensure accuracy, we make no warranties or representations about the app\' reliability or accuracy. In no event will CondiPlant be liable for any damages resulting from the use or inability to use CondiPlant, including but not limited to personal injury, loss of crops, or financial losses.\n\n

    <b>9. Modifications to Terms</b>\n\n
    We may update these Terms from time to time. If any changes are made, we will notify you within the app or by other communication channels. By continuing to use CondiPlant after an update, you agree to the revised Terms.\n\n

    <b>10. Contact Us</b>\n\n
    If you have any questions, feedback, or concerns about these Terms, please contact us at condiplantuc@gmail.com
</string>
    <string name="dialog_message">Please note that our app\'s predictions are specifically focused on <b>root crops found in Cabuyao area</b>. If you enter a plant that is unrelated to these crops, the predictions may be inaccurate. Thank you for your understanding and please ensure to use the app as intended.</string>

<string-array name="plantNamesArray">
    <item>Plant name 1</item>
    <item>Plant name 2</item>
    <item>Plant name 3</item>
    <item>Plant name 4</item>
</string-array>

<string-array name="diseaseNamesArray">
    <item>Disease name 1</item>
    <item>Disease name 2</item>
    <item>Disease name 3</item>
    <item>Disease name 4</item>
</string-array>

<string-array name="countsArray">
    <item>69</item>
    <item>420</item>
    <item>132</item>
    <item>456</item>
    <item>789</item>
</string-array>

</resources>