<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BgGreen"
    tools:context=".MainActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@android:color/holo_green_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="13dp"
            android:fontFamily="@font/racing_sans_one"
            android:text="@string/condiplant"
            android:textAlignment="center"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:layout_editor_absoluteX="145dp" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="49dp"
            android:layout_height="42dp"
            android:layout_marginStart="81dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="3dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/Title"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageButton
        android:id="@+id/btnSeeDiseases"
        android:layout_width="133dp"
        android:layout_height="150dp"
        android:adjustViewBounds="true"
        android:background="#00FFFFFF"
        android:contentDescription="See Diseases"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolBar"
        app:layout_constraintVertical_bias="0.7"
        app:srcCompat="@drawable/diseases" />

    <ImageButton
        android:id="@+id/btnCapture"
        android:layout_width="133dp"
        android:layout_height="150dp"
        android:adjustViewBounds="true"
        android:background="#00FFFFFF"
        android:contentDescription="Capture Image"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/btnSeeDiseases"
        app:layout_constraintEnd_toStartOf="@+id/btnUpload"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolBar"
        app:layout_constraintVertical_bias="0.75"
        app:srcCompat="@drawable/capture" />

    <ImageButton
        android:id="@+id/btnUpload"
        android:layout_width="133dp"
        android:layout_height="150dp"
        android:adjustViewBounds="true"
        android:background="#00FFFFFF"
        android:contentDescription="Upload Image"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/btnSeeDiseases"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtCapture"
        app:layout_constraintTop_toBottomOf="@+id/toolBar"
        app:layout_constraintVertical_bias="0.75"
        app:srcCompat="@drawable/upload" />

    <TextView
        android:id="@+id/txtCapture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/capture_image"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/btnCapture"
        app:layout_constraintEnd_toEndOf="@+id/btnCapture"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnCapture"
        app:layout_constraintTop_toTopOf="@+id/btnCapture"
        app:layout_constraintVertical_bias="0.95" />

    <TextView
        android:id="@+id/txtUpload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload_image"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/btnUpload"
        app:layout_constraintEnd_toEndOf="@+id/btnUpload"
        app:layout_constraintStart_toStartOf="@+id/btnUpload"
        app:layout_constraintTop_toTopOf="@+id/btnUpload"
        app:layout_constraintVertical_bias="0.95" />

    <TextView
        android:id="@+id/txtDiseases"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/known_diseases"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/btnSeeDiseases"
        app:layout_constraintEnd_toEndOf="@+id/btnSeeDiseases"
        app:layout_constraintStart_toStartOf="@+id/btnSeeDiseases"
        app:layout_constraintTop_toTopOf="@+id/btnSeeDiseases"
        app:layout_constraintVertical_bias="0.97" />

</androidx.constraintlayout.widget.ConstraintLayout>